--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,13 @@
 buildscript {
     ext {
         springBootVersion = '2.1.1.RELEASE'
+
+        jacksonCodehausVersion = "1.9.13"
+        jacksonVersion = "2.9.6"
+
+        lombokVersion = "1.18.4"
+        logbackVersion = "1.2.3"
+        slf4jVersion = "1.7.25"
     }
     repositories {
         mavenCentral()
@@ -23,6 +30,21 @@ repositories {
     mavenCentral()
 }
 
+List jackson = [
+        "org.codehaus.jackson:jackson-core-asl:${jacksonCodehausVersion}",
+        "org.codehaus.jackson:jackson-mapper-asl:${jacksonCodehausVersion}",
+
+        "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}",
+        "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}",
+        "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}",
+
+        "com.fasterxml.jackson.datatype:jackson-datatype-joda:${jacksonVersion}",
+        "com.fasterxml.jackson.module:jackson-module-afterburner:${jacksonVersion}",
+        "com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:${jacksonVersion}",
+        "com.fasterxml.jackson.dataformat:jackson-dataformat-smile:${jacksonVersion}",
+        "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${jacksonVersion}",
+]
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -32,6 +54,12 @@ dependencies {
     implementation 'org.webjars:sockjs-client:1.0.2'
     implementation 'org.webjars:stomp-websocket:2.3.3'
     implementation 'com.google.code.gson:gson'
+    implementation "org.projectlombok:lombok:${lombokVersion}"
+    implementation "ch.qos.logback:logback-classic:${logbackVersion}"
+    implementation "ch.qos.logback:logback-core:${logbackVersion}"
+    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
+
+    implementation jackson
 
     runtime 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
