--- a/build.gradle
+++ b/build.gradle
@@ -17,52 +17,63 @@ buildscript {
     }
 }
 
-apply plugin: 'idea'
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-
-group = 'me.ted.code'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
-
-repositories {
-    mavenCentral()
+allprojects {
+    group = 'me.ted.code'
+    version = '0.0.1-SNAPSHOT'
 }
 
-List jackson = [
-        "org.codehaus.jackson:jackson-core-asl:${jacksonCodehausVersion}",
-        "org.codehaus.jackson:jackson-mapper-asl:${jacksonCodehausVersion}",
+subprojects {
+    apply plugin: 'idea'
+    apply plugin: 'java'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
 
-        "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}",
-        "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}",
-        "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}",
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
 
-        "com.fasterxml.jackson.datatype:jackson-datatype-joda:${jacksonVersion}",
-        "com.fasterxml.jackson.module:jackson-module-afterburner:${jacksonVersion}",
-        "com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:${jacksonVersion}",
-        "com.fasterxml.jackson.dataformat:jackson-dataformat-smile:${jacksonVersion}",
-        "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${jacksonVersion}",
-]
+    repositories {
+        mavenCentral()
+    }
 
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    dependencies {
+        // spring family
+        compile("org.springframework.boot:spring-boot-configuration-processor")
+        compile('org.springframework.boot:spring-boot-starter-actuator')
+        compile('org.springframework.boot:spring-boot-starter-aop')
+        compile('org.springframework.boot:spring-boot-starter-cache')
+        compile("org.springframework.boot:spring-boot-starter-data-jpa")
+        compile('org.springframework.boot:spring-boot-starter-data-redis')
+        compile("org.springframework.boot:spring-boot-starter-jdbc")
+        compile('org.springframework.boot:spring-boot-starter-security')
+        compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+        compile("org.springframework.boot:spring-boot-starter-web")
+        compile("org.springframework.boot:spring-boot-starter-websocket")
+        compile('org.springframework.boot:spring-boot-devtools')
 
-    implementation 'org.webjars:sockjs-client:1.0.2'
-    implementation 'org.webjars:stomp-websocket:2.3.3'
-    implementation 'com.google.code.gson:gson'
-    implementation "org.projectlombok:lombok:${lombokVersion}"
-    implementation "ch.qos.logback:logback-classic:${logbackVersion}"
-    implementation "ch.qos.logback:logback-core:${logbackVersion}"
-    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
+        // jackson
+        compile("org.codehaus.jackson:jackson-core-asl:${jacksonCodehausVersion}")
+        compile("org.codehaus.jackson:jackson-mapper-asl:${jacksonCodehausVersion}")
+        compile("com.fasterxml.jackson.core:jackson-core:${jacksonVersion}")
+        compile("com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}")
+        compile("com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}")
+        compile("com.fasterxml.jackson.datatype:jackson-datatype-joda:${jacksonVersion}")
+        compile("com.fasterxml.jackson.module:jackson-module-afterburner:${jacksonVersion}")
+        compile("com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:${jacksonVersion}")
+        compile("com.fasterxml.jackson.dataformat:jackson-dataformat-smile:${jacksonVersion}")
+        compile("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${jacksonVersion}")
 
-    implementation jackson
+        // other
+        implementation 'org.webjars:sockjs-client:1.0.2'
+        implementation 'org.webjars:stomp-websocket:2.3.3'
+        implementation 'com.google.code.gson:gson'
+        implementation "org.projectlombok:lombok:${lombokVersion}"
+        implementation "ch.qos.logback:logback-classic:${logbackVersion}"
+        implementation "ch.qos.logback:logback-core:${logbackVersion}"
+        implementation "org.slf4j:slf4j-api:${slf4jVersion}"
 
-    runtime 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'com.h2database:h2'
+        runtime 'org.springframework.boot:spring-boot-devtools'
+        runtimeOnly 'com.h2database:h2'
 
-    testCompile 'org.springframework.boot:spring-boot-starter-test'
+        testCompile 'org.springframework.boot:spring-boot-starter-test'
+    }
 }
