--- a/build.gradle
+++ b/build.gradle
@@ -43,12 +43,14 @@ subprojects {
         compile('org.springframework.boot:spring-boot-starter-cache')
         compile("org.springframework.boot:spring-boot-starter-data-jpa")
         compile('org.springframework.boot:spring-boot-starter-data-redis')
+        compile("org.springframework.boot:spring-boot-starter-hateoas")
         compile("org.springframework.boot:spring-boot-starter-jdbc")
-        compile('org.springframework.boot:spring-boot-starter-security')
+//        compile('org.springframework.boot:spring-boot-starter-security')
         compile('org.springframework.boot:spring-boot-starter-thymeleaf')
         compile("org.springframework.boot:spring-boot-starter-web")
         compile("org.springframework.boot:spring-boot-starter-websocket")
         compile('org.springframework.boot:spring-boot-devtools')
+        compile('org.springframework.data:spring-data-rest-hal-browser')
 
         // jackson
         compile("org.codehaus.jackson:jackson-core-asl:${jacksonCodehausVersion}")
