Add venv on gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,14 @@
 /dist/
 /nbdist/
 /.nb-gradle/
+
+### venv ###
+pyvenv.cfg
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+pip-selfcheck.json
